cut off fixed

--- a/portfolio.css
+++ b/portfolio.css
@@ -194,7 +194,7 @@ header {
 
 #section_1 .container {
   display: grid;
-  grid-template-columns: repeat(var(--repeat, auto-fit), minmax(200px, 1fr));
+  grid-template-columns: repeat(var(--repeat, auto-fit), minmax(300px, 1fr));
   align-items: center;
   justify-content: center;
   gap: 3rem;
